--- a/src/Bazinga.AspNetCore.Authentication.Basic.csproj
+++ b/src/Bazinga.AspNetCore.Authentication.Basic.csproj
@@ -18,9 +18,9 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0-preview2-final" />
   </ItemGroup>
 
 </Project>
